# cmake-install-export-example

app/: CMakeLists.txt
app/src/: myapp.cpp
lib/: CMakeLists.txt
lib/cmake/: MyLibConfig.cmake
lib/include/mylib/: export.h  mylib.h
lib/src/: mylib.cpp
lib2/: CMakeLists.txt
lib2/include/mylib2/: doublethis.h  export.h
lib2/src/: doublethis.cpp
